--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-beta.5",
     "@clerk/nextjs": "^6.12.6",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
@@ -29,9 +30,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i": "^0.3.7",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "npm": "^11.2.0",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
